--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@primer/octicons-react": "^19.8.0",
         "@primer/primitives": "^7.15.0",
         "@primer/react": "^35.32.1",
+        "clsx": "^2.0.0",
         "eslint": "^8.51.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
